<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.apilearning</groupId>
  <artifactId>apilearning</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>apilearning</name>
  <url>http://maven.apache.org</url>
  
 <build>
<plugins>
<plugin>

<groupId>org.apache.maven.plugins</groupId>

<artifactId>maven-compiler-plugin</artifactId>

<version>2.3.2</version>
<configuration>

<source>1.7</source>

<target>1.7</target>

<showDeprecation>false</showDeprecation>

<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>

</configuration>

</plugin>


<plugin>

<groupId>org.apache.maven.plugins</groupId>

<artifactId>maven-surefire-plugin</artifactId>

<version>2.18</version>


<configuration>

<skip>false</skip>

<reportsDirectory>${basedir}/test-output</reportsDirectory>


<suiteXmlFiles>

<suiteXmlFile>testng.xml</suiteXmlFile>

</suiteXmlFiles>


<properties>

<desktop>${desktop}</desktop>

<browser_value>${browserName}</browser_value>

<auto_close_driver>${autoCloseDriver}</auto_close_driver>

<selenium_hub>${seleniumHub}</selenium_hub>

<screenshot_linkpath>${screenshotLink}</screenshot_linkpath>

<url_log>${urlLog}</url_log>

</properties>

</configuration>

</plugin>

</plugins>

<outputDirectory>${basedir}/target/test-classes</outputDirectory>

<sourceDirectory>${basedir}/src/main/java</sourceDirectory>

<testSourceDirectory>${basedir}/src/test/java</testSourceDirectory>

<testOutputDirectory>${basedir}/target/test-classes</testOutputDirectory>

<!-- -->


</build>
  
  
 <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>
    <dependency>
  <groupId>org.testng</groupId>
  <artifactId>testng</artifactId>
  <version>6.8</version>
  <scope>test</scope>
</dependency>
<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
<dependency>
    <groupId>com.google.code.gson</groupId>
    <artifactId>gson</artifactId>
    <version>2.8.4</version>
</dependency>
<!-- https://mvnrepository.com/artifact/com.jayway.restassured/rest-assured -->
<dependency>
    <groupId>com.jayway.restassured</groupId>
    <artifactId>rest-assured</artifactId>
    <version>2.9.0</version>
    <scope>test</scope>
</dependency>
<!-- https://mvnrepository.com/artifact/com.jayway.jsonpath/json-path -->
<dependency>
    <groupId>com.jayway.jsonpath</groupId>
    <artifactId>json-path</artifactId>
    <version>2.4.0</version>
</dependency>
<!-- https://mvnrepository.com/artifact/com.github.fge/json-schema-validator -->
<dependency>
    <groupId>com.github.fge</groupId>
    <artifactId>json-schema-validator</artifactId>
    <version>2.2.6</version>
</dependency>

  </dependencies>
</project>
